FW-3 Integrate prev and next posts
